solve task2 prepare data

--- a/W4_DL/C1_M1_Getting_Started/C1M1_Assignment/C1M1_Assignment.ipynb
+++ b/W4_DL/C1_M1_Getting_Started/C1M1_Assignment/C1M1_Assignment.ipynb
@@ -126,15 +126,16 @@
       "\n",
       " Directory of c:\\Users\\lamia\\Downloads\\ai-pros-v1-2025\\W4_DL\\C1_M1_Getting_Started\\C1M1_Assignment\n",
       "\n",
-      "01/05/2026  05:48 AM    <DIR>          .\n",
+      "01/05/2026  05:52 AM    <DIR>          .\n",
       "01/05/2026  05:48 AM    <DIR>          ..\n",
-      "01/05/2026  05:48 AM            54,416 C1M1_Assignment.ipynb\n",
+      "01/05/2026  05:52 AM    <DIR>          __pycache__\n",
+      "01/05/2026  08:58 AM           177,386 C1M1_Assignment.ipynb\n",
       "01/05/2026  05:48 AM             2,035 data_with_features.csv\n",
       "01/05/2026  05:48 AM            24,933 helper_utils.py\n",
       "01/05/2026  05:48 AM            16,120 unittests.py\n",
       "01/05/2026  05:48 AM             1,362 unittests_utils.py\n",
-      "               5 File(s)         98,866 bytes\n",
-      "               2 Dir(s)  860,790,251,520 bytes free\n"
+      "               5 File(s)        221,836 bytes\n",
+      "               3 Dir(s)  860,788,518,912 bytes free\n"
      ]
     }
    ],
@@ -197,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "5b41bb82-26de-45ce-a8bc-50f438ab2897",
    "metadata": {
     "deletable": false,
@@ -252,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "243d84ed-70a7-4797-b699-4dcc0bff6da9",
    "metadata": {
     "deletable": false,
@@ -289,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "fa021fc6-2209-47b2-82fc-0f8f90e5c7c3",
    "metadata": {
     "deletable": false,
@@ -345,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "446908a9-4764-4f72-99cf-402597e5c720",
    "metadata": {
     "deletable": false,
@@ -394,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "e1d94e52-3b2a-40cc-8825-d5aa8dd7c45d",
    "metadata": {
     "deletable": false,
@@ -426,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "c30aab41-5ad4-462f-8b6c-238a39cfda61",
    "metadata": {
     "deletable": false,
@@ -508,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "9f8f4807-843f-4079-ad41-4f8c691c449b",
    "metadata": {
     "deletable": false,
@@ -550,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "c335f3c6-58cf-4482-9825-b4589d4e9b01",
    "metadata": {
     "deletable": false,
@@ -671,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "757616f3-cbdd-402b-ac0f-81997989575a",
    "metadata": {
     "deletable": false,
@@ -701,24 +702,26 @@
     "    all_values = df.values\n",
     "\n",
     "    ### START CODE HERE ###\n",
-    "\n",
+    "    \n",
     "    # Convert all the values from the DataFrame into a single PyTorch tensor\n",
-    "    full_tensor = __BLANK__\n",
+    "    full_tensor = torch.tensor(all_values, dtype=torch.float32)\n",
     "\n",
     "    # Use tensor slicing to separate out each raw column\n",
-    "    raw_distances = __BLANK__\n",
-    "    raw_hours = __BLANK__\n",
-    "    raw_weekends = __BLANK__\n",
-    "    raw_targets = __BLANK__\n",
+    "    \n",
+    "    \n",
+    "    raw_distances =full_tensor[:, 0]\n",
+    "    raw_hours = full_tensor[:, 1]\n",
+    "    raw_weekends = full_tensor[:, 2]\n",
+    "    raw_targets = full_tensor[:, 3]\n",
     "\n",
     "    # Call your rush_hour_feature() function to engineer the new feature\n",
-    "    is_rush_hour_feature = __BLANK__\n",
+    "    is_rush_hour_feature = rush_hour_feature(raw_hours, raw_weekends)\n",
     "\n",
     "    # Use the .unsqueeze(1) method to reshape the four 1D feature tensors into 2D column vectors\n",
-    "    distances_col = __BLANK__\n",
-    "    hours_col = __BLANK__\n",
-    "    weekends_col = __BLANK__\n",
-    "    rush_hour_col = __BLANK__\n",
+    "    distances_col = raw_distances.unsqueeze(1)\n",
+    "    hours_col = raw_hours.unsqueeze(1)\n",
+    "    weekends_col = raw_weekends.unsqueeze(1)\n",
+    "    rush_hour_col =is_rush_hour_feature.unsqueeze(1)\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "\n",
@@ -759,24 +762,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "86be25c9-ba30-4df1-90f3-bdb55933977c",
    "metadata": {
     "deletable": false,
     "editable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Prepared Tensors (After Preparation) ---\n",
+      "\n",
+      "--- Prepared Features ---\n",
+      "\n",
+      "Shape: torch.Size([5, 4])\n",
+      "Values:\n",
+      " tensor([[-1.3562, -1.0254,  0.0000,  1.0000],\n",
+      "        [ 0.4745,  1.0197,  1.0000,  0.0000],\n",
+      "        [-0.5006, -1.0682,  1.0000,  0.0000],\n",
+      "        [ 0.0873,  0.8461,  0.0000,  1.0000],\n",
+      "        [ 1.2951,  0.2278,  0.0000,  0.0000]])\n",
+      "\n",
+      "--- Prepared Targets ---\n",
+      "Shape: torch.Size([5, 1])\n",
+      "Values:\n",
+      " tensor([[ 7.2200],\n",
+      "        [32.4100],\n",
+      "        [17.4700],\n",
+      "        [37.1700],\n",
+      "        [38.3600]])\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a small test DataFrame with the first 5 entries\n",
     "test_df = data_df.head(5).copy()\n",
     "\n",
     "# Print the \"Before\" state as a raw tensor\n",
     "raw_test_tensor = torch.tensor(test_df.values, dtype=torch.float32)\n",
-    "print(\"--- Raw Tensor (Before Preparation) ---\\n\")\n",
-    "print(f\"Shape: {raw_test_tensor.shape}\")\n",
-    "print(\"Values:\\n\", raw_test_tensor)\n",
-    "print(\"\\n\" + \"=\"*50 + \"\\n\")\n",
+    "#print(\"--- Raw Tensor (Before Preparation) ---\\n\")\n",
+    "#print(f\"Shape: {raw_test_tensor.shape}\")\n",
+    "#print(\"Values:\\n\", raw_test_tensor)\n",
+    "#print(\"\\n\" + \"=\"*50 + \"\\n\")\n",
     "\n",
     "# Run the function to get the prepared \"after\" tensors\n",
     "test_features, test_targets, _ = prepare_data(test_df)\n",
@@ -789,7 +819,7 @@
     "\n",
     "print(\"\\n--- Prepared Targets ---\")\n",
     "print(f\"Shape: {test_targets.shape}\")\n",
-    "print(\"Values:\\n\", test_targets)"
+    "print(\"Values:\\n\", test_targets)\n"
    ]
   },
   {
