--- a/W4_DL/C1_M1_Getting_Started/C1M1_Assignment/C1M1_Assignment.ipynb
+++ b/W4_DL/C1_M1_Getting_Started/C1M1_Assignment/C1M1_Assignment.ipynb
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "1c476923-539d-411a-a040-20099bb4198a",
    "metadata": {
     "deletable": false,
@@ -1037,24 +1037,24 @@
     "    ### START CODE HERE ###\n",
     "\n",
     "    # Define the model architecture using nn.Sequential\n",
-    "    model = __BLANK__\n",
+    "    model = nn.Sequential(\n",
     "        # Input layer (Linear): 4 input features, 64 output features\n",
-    "        __BLANK__\n",
+    "        nn.Linear(4, 64),\n",
     "        # First ReLU activation function\n",
-    "        __BLANK__\n",
+    "        nn.ReLU(),\n",
     "        # Hidden layer (Linear): 64 inputs, 32 outputs\n",
-    "        __BLANK__\n",
+    "        nn.Linear(64, 32),\n",
     "        # Second ReLU activation function\n",
-    "        __BLANK__\n",
+    "        nn.ReLU(),\n",
     "        # Output layer (Linear): 32 inputs, 1 output (the prediction)\n",
-    "        __BLANK__\n",
-    "        __BLANK__\n",
-    "    \n",
+    "        nn.Linear(32, 1)\n",
+    "    )\n",
+    "\n",
     "    # Define the optimizer (Stochastic Gradient Descent)\n",
-    "    optimizer = __BLANK__\n",
+    "    optimizer = torch.optim.SGD(model.parameters(), lr=0.01)\n",
     "\n",
     "    # Define the loss function (Mean Squared Error for regression)\n",
-    "    loss_function = __BLANK__\n",
+    "    loss_function = nn.MSELoss()\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "\n",
@@ -1063,14 +1063,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "2f14c137-33aa-4d17-9970-82ce69b6b430",
    "metadata": {
     "deletable": false,
     "editable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==============================\n",
+      "Initialized Model Architecture\n",
+      "==============================\n",
+      "Sequential(\n",
+      "  (0): Linear(in_features=4, out_features=64, bias=True)\n",
+      "  (1): ReLU()\n",
+      "  (2): Linear(in_features=64, out_features=32, bias=True)\n",
+      "  (3): ReLU()\n",
+      "  (4): Linear(in_features=32, out_features=1, bias=True)\n",
+      ")\n",
+      "\n",
+      "==============================\n",
+      "Optimizer\n",
+      "==============================\n",
+      "SGD (\n",
+      "Parameter Group 0\n",
+      "    dampening: 0\n",
+      "    differentiable: False\n",
+      "    foreach: None\n",
+      "    fused: None\n",
+      "    lr: 0.01\n",
+      "    maximize: False\n",
+      "    momentum: 0\n",
+      "    nesterov: False\n",
+      "    weight_decay: 0\n",
+      ")\n",
+      "\n",
+      "==============================\n",
+      "Loss Function\n",
+      "==============================\n",
+      "MSELoss()\n"
+     ]
+    }
+   ],
    "source": [
     "model, optimizer, loss_function = init_model()\n",
     "\n",
