--- a/W4_DL/C1_M2_PyTorch_Workflow/C1M2_Assignment/C1M2_Assignment.ipynb
+++ b/W4_DL/C1_M2_PyTorch_Workflow/C1M2_Assignment/C1M2_Assignment.ipynb
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "deletable": false,
     "tags": [
@@ -834,22 +834,24 @@
     "    ### START CODE HERE ###\n",
     "\n",
     "    # Define the neural network model using nn.Sequential\n",
-    "    model = __BLANK__(\n",
+    "    model = nn.Sequential(\n",
     "        # Flatten the input images\n",
-    "        __BLANK__,\n",
+    "        nn.Flatten(),\n",
     "        # Middle part should not have more than 5 layers. Only Linear and ReLU layers.\n",
     "        # Note: Hidden layer units should not exceed 256\n",
-    "        __BLANK__,\n",
+    "        nn.Linear(784, 256),\n",
+    "        nn.ReLU(),\n",
+    "        nn.Linear(256, 128),\n",
+    "        nn.ReLU(),\n",
+    "        nn.Linear(128, 26),\n",
     "        # Final Layer: SHOULD be Linear Layer\n",
     "        # Output layer with shape nn.Linear(valid inputs to the layer, num_classes outputs)\n",
-    "        __BLANK__,\n",
     "    )\n",
     "\n",
     "    # Define the loss function (Cross-Entropy Loss for multi-class classification)\n",
-    "    loss_function = __BLANK__\n",
-    "\n",
+    "    loss_function = nn.CrossEntropyLoss()\n",
     "    # Define the optimizer (Adaptive Moment Estimation)\n",
-    "    optimizer = __BLANK__\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "\n",
@@ -866,12 +868,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your model's architecture:\n",
+      "\n",
+      "Sequential(\n",
+      "  (0): Flatten(start_dim=1, end_dim=-1)\n",
+      "  (1): Linear(in_features=784, out_features=256, bias=True)\n",
+      "  (2): ReLU()\n",
+      "  (3): Linear(in_features=256, out_features=128, bias=True)\n",
+      "  (4): ReLU()\n",
+      "  (5): Linear(in_features=128, out_features=26, bias=True)\n",
+      ")\n",
+      "\n",
+      "Your model's loss function: CrossEntropyLoss()\n",
+      "\n",
+      "Your model's optimizer:\n",
+      "\n",
+      "Adam (\n",
+      "Parameter Group 0\n",
+      "    amsgrad: False\n",
+      "    betas: (0.9, 0.999)\n",
+      "    capturable: False\n",
+      "    decoupled_weight_decay: False\n",
+      "    differentiable: False\n",
+      "    eps: 1e-08\n",
+      "    foreach: None\n",
+      "    fused: None\n",
+      "    lr: 0.001\n",
+      "    maximize: False\n",
+      "    weight_decay: 0\n",
+      ")\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "your_model, loss_func, optimizer = initialize_emnist_model(num_classes=26)\n",
     "\n",
