--- a/W4_DL/C1_M2_PyTorch_Workflow/C1M2_Assignment/C1M2_Assignment.ipynb
+++ b/W4_DL/C1_M2_PyTorch_Workflow/C1M2_Assignment/C1M2_Assignment.ipynb
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "deletable": false,
     "tags": [
@@ -1159,12 +1159,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch Loss (Avg): 0.599 | Epoch Acc: 81.49%\n"
+     ]
+    }
+   ],
    "source": [
     "### This will take a few seconds to execute\n",
     "model, loss_function, optimizer = initialize_emnist_model(num_classes=26)\n",
