--- a/W4_DL/C1_M2_PyTorch_Workflow/C1M2_Assignment/C1M2_Assignment.ipynb
+++ b/W4_DL/C1_M2_PyTorch_Workflow/C1M2_Assignment/C1M2_Assignment.ipynb
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "deletable": false,
     "tags": [
@@ -1295,7 +1295,7 @@
     "    ### START CODE HERE ###\n",
     "    \n",
     "    # Use torch.no_grad() context to disable gradient calculations during evaluation.\n",
-    "    with __BLANK__:\n",
+    "    with    torch.no_grad():                                \n",
     "\n",
     "    ### END CODE HERE ###\n",
     "        \n",
@@ -1310,7 +1310,7 @@
     "        ### START CODE HERE ###\n",
     "\n",
     "            # Pass the inputs through the model to get the outputs.\n",
-    "            outputs = __BLANK__\n",
+    "            outputs = model(inputs)\n",
     "\n",
     "            # Get the predicted indices (by taking the argmax along dimension 1 of the outputs).\n",
     "            predicted_indices = torch.argmax(outputs, 1)\n",
@@ -1348,12 +1348,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 87.56%\n"
+     ]
+    }
+   ],
    "source": [
     "model_evaluate = evaluate(model, test_loader, DEVICE)"
    ]
@@ -1380,7 +1388,7 @@
    },
    "outputs": [],
    "source": [
-    "# Test your code!\n",
+    "# Test your code! \n",
     "unittests.exercise_4(evaluate, model, test_loader)"
    ]
   },
