--- a/W4_DL/C1_M2_PyTorch_Workflow/C1M2_Assignment/C1M2_Assignment.ipynb
+++ b/W4_DL/C1_M2_PyTorch_Workflow/C1M2_Assignment/C1M2_Assignment.ipynb
@@ -1420,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "deletable": false,
     "tags": [
@@ -1455,10 +1455,10 @@
     "\n",
     "        ### START CODE HERE ###\n",
     "        # Train the model for one epoch using the train_epoch function.\n",
-    "        trained_model, _ = __BLANK__(...)\n",
+    "        trained_model, _ = train_epoch(model=model, train_loader=train_loader, loss_function=loss_function, optimizer=optimizer, device=device)\n",
     "\n",
     "        # Evaluate the trained model on the test dataset using the evaluate function.\n",
-    "        accuracy = __BLANK__(...)\n",
+    "        accuracy = evaluate(model=trained_model, test_loader=test_loader, device=device)\n",
     "\n",
     "        ### END CODE HERE ###\n",
     "\n",
@@ -1478,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "deletable": false
    },
@@ -1492,12 +1492,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch: 1\n",
+      "Epoch Loss (Avg): 0.599 | Epoch Acc: 81.49%\n",
+      "Test Accuracy: 87.56%\n",
+      "\n",
+      "Epoch: 2\n",
+      "Epoch Loss (Avg): 0.326 | Epoch Acc: 89.47%\n",
+      "Test Accuracy: 89.62%\n",
+      "\n",
+      "Epoch: 3\n",
+      "Epoch Loss (Avg): 0.270 | Epoch Acc: 90.96%\n",
+      "Test Accuracy: 89.78%\n",
+      "\n",
+      "Epoch: 4\n",
+      "Epoch Loss (Avg): 0.238 | Epoch Acc: 91.87%\n",
+      "Test Accuracy: 89.83%\n",
+      "\n",
+      "Epoch: 5\n",
+      "Epoch Loss (Avg): 0.214 | Epoch Acc: 92.58%\n",
+      "Test Accuracy: 90.70%\n",
+      "\n",
+      "Epoch: 6\n",
+      "Epoch Loss (Avg): 0.194 | Epoch Acc: 93.06%\n",
+      "Test Accuracy: 90.43%\n",
+      "\n",
+      "Epoch: 7\n",
+      "Epoch Loss (Avg): 0.181 | Epoch Acc: 93.49%\n",
+      "Test Accuracy: 90.85%\n",
+      "\n",
+      "Epoch: 8\n",
+      "Epoch Loss (Avg): 0.169 | Epoch Acc: 93.75%\n",
+      "Test Accuracy: 90.54%\n",
+      "\n",
+      "Epoch: 9\n",
+      "Epoch Loss (Avg): 0.161 | Epoch Acc: 94.08%\n",
+      "Test Accuracy: 90.72%\n",
+      "\n",
+      "Epoch: 10\n",
+      "Epoch Loss (Avg): 0.150 | Epoch Acc: 94.44%\n",
+      "Test Accuracy: 90.30%\n"
+     ]
+    }
+   ],
    "source": [
     "### This might take a minute or so to execute\n",
     "\n",
@@ -1578,12 +1625,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy for A: 88.25 %\n",
+      "Accuracy for B: 90.88 %\n",
+      "Accuracy for C: 88.25 %\n",
+      "Accuracy for D: 89.62 %\n",
+      "Accuracy for E: 96.12 %\n",
+      "Accuracy for F: 94.88 %\n",
+      "Accuracy for G: 75.38 %\n",
+      "Accuracy for H: 90.88 %\n",
+      "Accuracy for I: 77.50 %\n",
+      "Accuracy for J: 92.62 %\n",
+      "Accuracy for K: 89.12 %\n",
+      "Accuracy for L: 69.75 %\n",
+      "Accuracy for M: 96.50 %\n",
+      "Accuracy for N: 93.25 %\n",
+      "Accuracy for O: 96.12 %\n",
+      "Accuracy for P: 93.62 %\n",
+      "Accuracy for Q: 83.00 %\n",
+      "Accuracy for R: 93.38 %\n",
+      "Accuracy for S: 96.75 %\n",
+      "Accuracy for T: 93.50 %\n",
+      "Accuracy for U: 95.75 %\n",
+      "Accuracy for V: 87.25 %\n",
+      "Accuracy for W: 94.50 %\n",
+      "Accuracy for X: 93.38 %\n",
+      "Accuracy for Y: 90.75 %\n",
+      "Accuracy for Z: 96.75 %\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate the trained model's performance on each letter class\n",
     "class_accuracies = helper_utils.evaluate_per_class(trained_model, test_loader, DEVICE)\n",
