--- a/W4_DL/C1_M4_Core_NN_Components/C1M4_Assignment/C1M4_Assignment.ipynb
+++ b/W4_DL/C1_M4_Core_NN_Components/C1M4_Assignment/C1M4_Assignment.ipynb
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "cea01e0f-9910-4de3-a431-7dcaac779817",
    "metadata": {
     "deletable": false,
@@ -704,15 +704,15 @@
     "        ### START CODE HERE ###\n",
     "        \n",
     "        # Define the sequential container for the block's layers.\n",
-    "        self.block = __BLANK__(\n",
+    "        self.block = nn.Sequential(\n",
     "            # 2D convolutional layer to apply learnable filters to the input.\n",
-    "            __BLANK__,\n",
+    "            nn.Conv2d(in_channels, out_channels, kernel_size=kernel_size, padding=padding),\n",
     "            # Batch normalization to stabilize and accelerate training.\n",
-    "            __BLANK__,\n",
+    "            nn.BatchNorm2d(out_channels),\n",
     "            # ReLU activation function to introduce non-linearity.\n",
-    "            __BLANK__,\n",
+    "            nn.ReLU(),\n",
     "            # Max pooling layer to downsample the feature map and reduce spatial dimensions.\n",
-    "            __BLANK__\n",
+    "            nn.MaxPool2d(kernel_size=2, stride=2)\n",
     "        ) \n",
     "        \n",
     "        ### END CODE HERE ###\n",
@@ -731,7 +731,7 @@
     "        ### START CODE HERE ###\n",
     "        \n",
     "        # Pass the input tensor through the sequential block of layers.\n",
-    "        x = __BLANK__\n",
+    "        x = self.block(x)\n",
     "        return x\n",
     "    \n",
     "        ### END CODE HERE ###"
@@ -739,13 +739,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "87f3fe7b-7ec3-47fc-bbac-24d8b3090a9c",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Verifying CNNBlock ---\n",
+      "\n",
+      "Block Structure:\n",
+      "\n",
+      "CNNBlock(\n",
+      "  (block): Sequential(\n",
+      "    (0): Conv2d(3, 16, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (1): BatchNorm2d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (2): ReLU()\n",
+      "    (3): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  )\n",
+      ")\n",
+      "\n",
+      "Input tensor shape:  torch.Size([1, 3, 32, 32])\n",
+      "Output tensor shape: torch.Size([1, 16, 16, 16])\n"
+     ]
+    }
+   ],
    "source": [
     "# Verify the CNNBlock\n",
     "print(\"--- Verifying CNNBlock ---\\n\")\n",
