--- a/W4_DL/C1_M4_Core_NN_Components/C1M4_Assignment/C1M4_Assignment.ipynb
+++ b/W4_DL/C1_M4_Core_NN_Components/C1M4_Assignment/C1M4_Assignment.ipynb
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "4e70233b-fbfe-4379-9a51-202e10740cec",
    "metadata": {
     "deletable": false,
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "f85ea397-ac90-40dc-ba0d-0d3a13998de4",
    "metadata": {
     "deletable": false,
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "677d45c3-298b-4d4f-bb07-21efcb53c526",
    "metadata": {
     "deletable": false,
@@ -1305,15 +1305,15 @@
     "        ### START CODE HERE ###\n",
     "        \n",
     "        # Clear the gradients of all optimized variables\n",
-    "        __BLANK__\n",
+    "        optimizer.zero_grad()\n",
     "        # Perform a forward pass to get model outputs\n",
-    "        __BLANK__\n",
+    "        outputs = model(images)\n",
     "        # Calculate the loss\n",
-    "        __BLANK__\n",
+    "        loss = loss_function(outputs, labels)\n",
     "        # Perform a backward pass to compute gradients\n",
-    "        __BLANK__\n",
+    "        loss.backward()\n",
     "        # Update the model parameters\n",
-    "        __BLANK__\n",
+    "        optimizer.step()\n",
     "        \n",
     "        ### END CODE HERE ###\n",
     "        \n",
@@ -1327,13 +1327,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "865482be-7a13-40e1-a5d0-423ce72c6039",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Verifying train_epoch (training for 5 epochs) ---\n",
+      "\n",
+      "Training on 640 images for 5 epochs:\n",
+      "\n",
+      "Epoch [1/5], Loss: 2.6411\n",
+      "Epoch [2/5], Loss: 2.2793\n",
+      "Epoch [3/5], Loss: 2.0277\n",
+      "Epoch [4/5], Loss: 1.8697\n",
+      "Epoch [5/5], Loss: 1.7233\n",
+      "\n",
+      "Weight Update Check:\tModel weights changed during training.\n",
+      "Loss Trend Check:\tLoss decreased from 2.6411 to 1.7233.\n"
+     ]
+    }
+   ],
    "source": [
     "# Use a helper function to perform a sanity check on the train_epoch implementation\n",
     "helper_utils.verify_training_process(SimpleCNN, train_loader, loss_function, train_epoch, device)"
