--- a/W4_DL/C1_M3_Data_Management/C1M3_Assignment/C1M3_Assignment.ipynb
+++ b/W4_DL/C1_M3_Data_Management/C1M3_Assignment/C1M3_Assignment.ipynb
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "DnEU",
    "metadata": {
     "deletable": false,
@@ -1490,18 +1490,18 @@
     "\n",
     "    # Split the dataset into training, validation, and test sets\n",
     "    train_dataset, val_dataset, test_dataset = random_split(\n",
-    "            __BLANK__, __BLANK__\n",
+    "            dataset, [train_size,val_size,test_size] \n",
     "    )\n",
     "\n",
     "    # Create dataset with the corresponding transforms for each split\n",
-    "    train_dataset = __BLANK__\n",
-    "    val_dataset = __BLANK__\n",
-    "    test_dataset = __BLANK__\n",
+    "    train_dataset = SubsetWithTransform(train_dataset, augmentation_transform)\n",
+    "    val_dataset = SubsetWithTransform(val_dataset, main_transform)\n",
+    "    test_dataset = SubsetWithTransform(test_dataset, main_transform)\n",
     "\n",
     "    # Create DataLoaders for each split\n",
-    "    train_loader = __BLANK__\n",
-    "    val_loader = __BLANK__\n",
-    "    test_loader = __BLANK__\n",
+    "    train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "    val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
+    "    test_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "    return train_loader, val_loader, test_loader"
@@ -1509,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "40c54af4",
    "metadata": {
     "deletable": false,
@@ -1529,13 +1529,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "9632faba",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Train Loader ===\n",
+      "Number of batches in train_loader: 610\n",
+      "Number of samples in train_dataset: 19500\n",
+      "Transforms applied to train_dataset: Compose(\n",
+      "    RandomVerticalFlip(p=0.5)\n",
+      "    RandomRotation(degrees=[-15.0, 15.0], interpolation=nearest, expand=False, fill=0)\n",
+      "    Resize(size=(128, 128), interpolation=bilinear, max_size=None, antialias=True)\n",
+      "    ToTensor()\n",
+      "    Normalize(mean=tensor([0.6563, 0.6166, 0.4756]), std=tensor([0.2909, 0.2876, 0.3408]))\n",
+      ")\n",
+      "train_dataset type: <class '__main__.SubsetWithTransform'>\n",
+      "\n",
+      "=== Test Loader ===\n",
+      "Number of batches in test_loader: 141\n",
+      "Number of samples in test_dataset: 4500\n",
+      "Transforms applied to test_dataset: Compose(\n",
+      "    Resize(size=(128, 128), interpolation=bilinear, max_size=None, antialias=True)\n",
+      "    ToTensor()\n",
+      "    Normalize(mean=tensor([0.6563, 0.6166, 0.4756]), std=tensor([0.2909, 0.2876, 0.3408]))\n",
+      ")\n",
+      "test_dataset type: <class '__main__.SubsetWithTransform'>\n"
+     ]
+    }
+   ],
    "source": [
     "print('=== Train Loader ===')\n",
     "print(f\"Number of batches in train_loader: {len(train_loader)}\")\n",
